//
//  TitleConstants.swift
//  InterestingNumbers
//
//  Created by Yura Sabadin on 09.09.2023.
//

import Foundation

enum TitleConstants {
    
    //EnterVC
    static let logInButton = "LOG IN"
    static let tryGuestButton = "Try as Guest"
    static let singInButton = "Sing in"
    static let signUpButton = "Sing up"
    static let signUpLabel = "You don't have an account?"
    static let signInLabel = "I already have an account"
    
    
    //AuthorizedVC
    static let titleLabel = "Interesting Numbers"
    static let descriptionLabel = "This app about fucts of Numbers \n and Dates"
    static let name = " Enter your name"
    static let email = " Enter your email"
    static let password = " Enter your password"
    static let emailBusy = "This email already exists"
    static let forgotButton = "Forgot Password?"
    static let registerButton = "Register"
    
    //AuthorizedManager
    static let profileCollection = "users"
    static let productCollection = "Products"
    static let headerModel = "Headers"
    
    //AddProductVC
    static let titleAddVC = " Add product to cloud storage"
    static let productsHeader = "Products"
    static let notificationError = "notificationError"
    
    //ChoiseNumberVC
    static let enterLabel = "Enter here"
    static let showButton = "Display Fact"
    
    static let userNumber = "User\n number"
    static let randomNumber = "Random\n number"
    static let rangeNumber = "Namber\n in a range"
    static let multipleNumber = "Date\n numbers"
    
    static let placeholderUserNumber = "Input number like 45"
    static let placeholderRandomNumber = "Input random number"
    static let placeholderRangeNumber = "Input number like 45..67"
    static let placeholderDateNumber = "Input date like month/day (8/29)"
}
