...
import Combine


class ChoiseNumbersViewController: UIViewController {
    
    let nameLabel = UILabel()
    let userButton = UIButton(type: .system)
    let storeButton = UIButton(type: .system)
    private let scrollView = UIScrollView()
    private let choiseNumbersView = ChoiseNumbersView()
    private let validateManager = ValidateManager()
    let authService = AuthorizationService.shared
    var cancellable = Set<AnyCancellable>()
...
