...
        labelStack.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(labelStack)
    }
    
    private func setStackButtons() {
        let buttons = [editProfileButton, logOutProfileButton, deletProfileButton]
        let titleArr = ["Edit profile", "Log Out", "Delete profile"]
        buttons.enumerated().forEach { index, button in
            button.setTitle(titleArr[index], for: .normal)
            button.heightAnchor.constraint(equalToConstant: 40).isActive = true
            button.setBorderLayer(backgroundColor: .link, borderColor: .gray, borderWidth: 2, cornerRadius: 20, tintColor: .white)
            button.titleLabel?.font = .boldSystemFont(ofSize: 18)
        }
...
